tests/03-function-with-wrong-ref-type-arg.rs
use with_tempdir_procmacro::with_tempdir;

#[with_tempdir]
fn no_arg_fn(s: &String) {
    unimplemented!()
}

fn main() {
    assert!(true);
}
